--- a/client/src/index.css
+++ b/client/src/index.css
@@ -144,3 +144,15 @@ p {
 .change{
   max-width: 50px;
 }
+
+.listing {
+  table-layout: fixed;
+  width: 100%;
+  margin: 5px;
+}
+
+.search {
+  width:100%;
+  border-style: inherit;
+
+}
