--- a/client/src/index.css
+++ b/client/src/index.css
@@ -95,7 +95,7 @@ div:nth-child(11) {
   width: 18rem;
   margin: 0.2rem;
   border-radius: 3px;
-  background-color: yellow;
+  background-color: #805AD5;
   text-align: center;
   padding: 9px;
   cursor: pointer;
@@ -154,5 +154,28 @@ p {
 .search {
   width:100%;
   border-style: inherit;
+}
 
+.edit-box{
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  width: 100%
+}
+
+.form-box{
+  margin:1rem;
+}
+.edit{
+  max-width:30rem;
+  margin:0.5rem;
+}
+
+.search-edit{
+  width:70%;
+  margin:0.5rem
+}
+
+.Link {
+  text-decoration: underline;
+  cursor: pointer;
 }
